overflow corrected & sections spaced equal

--- a/assets/css/3-modules/_about.sass
+++ b/assets/css/3-modules/_about.sass
@@ -60,8 +60,10 @@
 
 .skill-lockup
 	max-width: 700px
-	margin: 100px auto
-	padding-left: 100px
+	margin: 0px auto
+	padding:
+		left: 100px
+		bottom: 100px
 	color: #555
 	font-family: Open Sans
 	font-size: 18px
