--- a/assets/css/3-modules/_blog.sass
+++ b/assets/css/3-modules/_blog.sass
@@ -3,3 +3,4 @@
 
 .blog-wrap
 	text-align: center
+	padding-bottom: 100px
