--- a/assets/css/3-modules/_contact.sass
+++ b/assets/css/3-modules/_contact.sass
@@ -1,3 +1,6 @@
+section
+	overflow: hidden
+
 .section-contact
 	background: $bg-color
 
@@ -28,8 +31,8 @@
 		family: 'Open Sans'
 		size: 72px
 		weight: 300
-	margin-bottom: 20px
-	margin-top: 20px
+	padding-bottom: 70px
+	padding-top: 30px
 	+transition
 
 	&:hover
